Switch to _method for the hidden-method param and delegate to Krazo for URL-encoded handling